--- a/src/index.scss
+++ b/src/index.scss
@@ -1,7 +1,4 @@
 @import '~bootstrap/scss/bootstrap';
-@import '~bootstrap/scss/_functions.scss';
-@import '~bootstrap/scss/_variables.scss';
-@import '~bootstrap/scss/mixins';
 
 * {
   margin: 0;
@@ -19,4 +16,28 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+}
+
+.dropdown-indicator {
+  position: relative;
+
+  &:after {
+    content: '';
+    display: block;
+    position: absolute;
+    right: 5px;
+    height: 0.4rem;
+    width: 0.4rem;
+    border-right: 1px solid #5e6e82;
+    border-bottom: 1px solid #5e6e82;
+    top: 50%;
+    transform: translateY(-50%) rotate(45deg);
+    transition: all 0.2s ease-in-out;
+    transform-origin: center;
+    transition-property: transform;
+  }
+
+  &[aria-expanded='true']:after {
+    transform: translateY(-50%) rotate(225deg);
+  }
 }
