--- a/src/views/components/structure/Sidebar/sidebar.scss
+++ b/src/views/components/structure/Sidebar/sidebar.scss
@@ -1,13 +1,43 @@
-@import '~bootstrap/scss/mixins';
-
 .sidebar {
   position: fixed;
   top: 0;
   bottom: 0;
   left: 0;
-  z-index: 100; /* Behind the navbar */
-  padding: 48px 0 0; /* Height of navbar */
+  z-index: 100;
+  padding: 48px 0 0;
   box-shadow: inset -1px 0 0 rgba(0, 0, 0, 0.1);
+  .nav-link {
+    font-weight: 500;
+    color: #333;
+    margin-right: 4px;
+    color: #999;
+    &:hover {
+      color: inherit;
+    }
+  }
+  .nav-link.active {
+    color: #007bff;
+    color: inherit;
+  }
+}
+.sidebar-sticky {
+  position: relative;
+  top: 0;
+  height: calc(100vh - 48px);
+  padding-top: 0.5rem;
+  overflow-x: hidden;
+  overflow-y: auto;
+}
+@supports ((position: -webkit-sticky) or (position: sticky)) {
+  .sidebar-sticky {
+    position: -webkit-sticky;
+    position: sticky;
+  }
+}
+
+.sidebar-heading {
+  font-size: 0.75rem;
+  text-transform: uppercase;
 }
 
 @media (max-width: 767.98px) {
@@ -16,404 +46,36 @@
   }
 }
 
-.sidebar-sticky {
-  position: relative;
-  top: 0;
-  height: calc(100vh - 48px);
-  padding-top: 0.5rem;
-  overflow-x: hidden;
-  overflow-y: auto; /* Scrollable contents if viewport is shorter than content. */
+.nav-link-icon {
+  width: 1.5em;
+  min-width: 1.5rem;
 }
 
-@supports ((position: -webkit-sticky) or (position: sticky)) {
-  .sidebar-sticky {
-    position: -webkit-sticky;
-    position: sticky;
-  }
-}
+.nav-vertial {
+  flex-flow: column nowrap;
+  font-size: 0.8125rem;
 
-.sidebar .nav-link {
-  font-weight: 500;
-  color: #333;
-}
-
-.sidebar .nav-link {
-  margin-right: 4px;
-  color: #999;
-}
-
-.sidebar .nav-link.active {
-  color: #007bff;
-}
-
-.sidebar .nav-link:hover,
-.sidebar .nav-link.active {
-  color: inherit;
-}
-
-.sidebar-heading {
-  font-size: 0.75rem;
-  text-transform: uppercase;
-}
-
-/*-----------------------------------------------
-|   Navbar
------------------------------------------------*/
-.shadow-bottom {
-  box-shadow: 0 0.5rem 0.5rem -0.5rem rgba(#000, 0.2) !important;
-}
-
-/*-----------------------------------------------
-|   Navbar vertical
------------------------------------------------*/
-$navbar-vertical-width: 12.625rem;
-$vartical-navbar-padding: 1.5rem;
-
-.navbar-top {
-  top: 0;
-  z-index: 1020;
-}
-
-.navbar-vertical {
-  position: -ms-device-fixed !important;
-  padding: 0;
-  z-index: 1019;
-  width: 100vw;
-
-  .navbar-brand {
-    display: none;
-  }
-
-  .navbar-collapse {
-    flex-direction: column;
-
-    > * {
-      width: 100%;
-      overflow: hidden;
-    }
-  }
-
-  .navbar-vertical-toggle {
-    display: none;
-  }
-
-  /*-----------------------------------------------
-  |   Navbar nav
-  -----------------------------------------------*/
-  .navbar-nav {
-    width: 100%;
-    font-size: 0.875rem;
-
+  .nav-item {
     .nav-link {
-      color: gray('700');
-      white-space: nowrap;
-
-      @include media-breakpoint-up('lg') {
-        padding: 0.35rem 0;
-      }
-
-      @include hover-focus {
-        color: gray('1000');
-
-        &.dropdown-indicator:after {
-          border-color: gray('1000');
-        }
-      }
+      padding: 0.2rem 1.5rem;
     }
 
-    .nav-link-icon {
-      width: $vartical-navbar-padding;
-      min-width: $vartical-navbar-padding;
-      font-size: map_get($font-sizes, 0);
+    &:last-child {
+      margin-bottom: 0.35rem;
+    }
+  }
+
+  .nav {
+    .nav-item {
+      .nav-link {
+        padding-left: 1.5rem * 1.75;
+      }
     }
 
     .nav {
-      flex-flow: column nowrap;
-      font-size: 0.8125rem;
-
       .nav-item {
         .nav-link {
-          padding: 0.2rem $vartical-navbar-padding;
-        }
-
-        &:last-child {
-          margin-bottom: 0.35rem;
-        }
-      }
-
-      .nav {
-        .nav-item {
-          .nav-link {
-            padding-left: $vartical-navbar-padding * 1.75;
-          }
-        }
-
-        .nav {
-          .nav-item {
-            .nav-link {
-              padding-left: $vartical-navbar-padding * 2.75;
-            }
-          }
-        }
-      }
-    }
-  }
-}
-
-/*-----------------------------------------------
-|   Break
------------------------------------------------*/
-
-$breaks: ('xxl', 'xl', 'lg', 'md', 'sm', 'xs');
-$navbar-collapsed-width: 3.4375rem;
-$navbar-vertical-max-width: 12.625rem;
-
-@for $i from 1 through length($breaks) {
-  $item: nth($breaks, $i);
-  $j: '';
-
-  @if length($breaks) !=$i {
-    $j: $i + 1;
-    $down: nth($breaks, $j);
-
-    @include media-breakpoint-down($down) {
-      @for $k from $j through length($breaks) {
-        $inneritem: nth($breaks, $k);
-
-        @if length($breaks) !=$k {
-          .navbar-vertical.navbar-expand-#{$item} {
-            @include media-breakpoint-only($inneritem) {
-              position: fixed;
-              max-width: map_get($container-max-widths, $inneritem) !important;
-              width: 100%;
-            }
-
-            & + .content {
-              padding-top: $top-nav-height;
-
-              .navbar-top {
-                position: fixed;
-                top: 0;
-
-                @include media-breakpoint-only($inneritem) {
-                  width: 100%;
-                  max-width: map_get($container-max-widths, $inneritem) !important;
-                }
-              }
-            }
-          }
-        }
-      }
-
-      .container-fluid {
-        .navbar-vertical.navbar-expand-#{$item} {
-          width: 100%;
-          max-width: 100vw !important;
-
-          & + .content .navbar-top {
-            width: 100%;
-            max-width: 100vw !important;
-          }
-        }
-      }
-    }
-
-    .navbar-vertical.navbar-expand-#{$item} {
-      @include media-breakpoint-up($item) {
-        position: fixed;
-        width: 100%;
-        top: 0;
-        max-height: 100vh;
-        display: block;
-        max-width: $navbar-vertical-width;
-
-        .navbar-vertical-toggle {
-          display: flex;
-        }
-
-        .navbar-brand {
-          display: block;
-          text-align: center;
-        }
-
-        & + .content {
-          margin-left: $navbar-vertical-width + map_get($spacers, 5);
-
-          .navbar-top {
-            position: sticky;
-
-            .navbar-brand,
-            .navbar-toggler {
-              display: none;
-            }
-          }
-        }
-
-        .navbar-collapse {
-          display: inline-block !important;
-          width: $navbar-vertical-max-width !important;
-          transition: $transition-base;
-          padding-top: 0.5rem;
-          height: calc(100vh - 69px);
-          margin-top: -0.3125rem;
-        }
-
-        .nav-link-text {
-          transition: $transition-base;
-        }
-
-        .navbar-collapse {
-          position: relative;
-          box-shadow: 0 0.5rem 0.5rem -0.5rem rgba($black, 0.2);
-          overflow-y: auto;
-        }
-
-        .settings .custom-control-label {
-          white-space: nowrap;
-        }
-
-        .safari & {
-          .navbar-vertical .navbar-collapse {
-            margin-top: 0.3125rem;
-            padding-top: 0.5625rem;
-          }
-        }
-      }
-
-      @include media-breakpoint-down($down) {
-        & + .content .navbar-top .navbar-toggler {
-          display: flex;
-        }
-
-        margin-left: -($grid-gutter-width / 2);
-        margin-right: -($grid-gutter-width / 2);
-
-        .navbar-nav {
-          padding-left: $grid-gutter-width / 2;
-          padding-right: $grid-gutter-width / 2;
-        }
-
-        .navbar-collapse {
-          &.show {
-            max-height: calc(100vh - #{$top-nav-height});
-            overflow-y: auto;
-          }
-        }
-      }
-    }
-  }
-}
-
-@include media-breakpoint-only('xs') {
-  .navbar-vertical {
-    position: fixed;
-    width: 100%;
-    max-width: 100vw !important;
-  }
-
-  .content {
-    padding-top: $top-nav-height;
-  }
-
-  // .navbar-top {
-  //   position: fixed;
-  //   width: 100%;
-  //   max-width: 100vw !important;
-  // }
-}
-
-// Navbar vertical collapse
-.toggle-icon-wrapper {
-  margin-left: -0.75rem;
-  padding-left: 0.125rem;
-  margin-right: 1.25rem;
-}
-
-@each $item, $value in $breaks {
-  @include media-breakpoint-up($item) {
-    .navbar-vertical-collapsed {
-      .navbar-vertical.navbar-expand-#{$item} {
-        z-index: 1030;
-        width: $navbar-collapsed-width;
-        height: 100vh;
-        background-color: transparent;
-
-        .navbar-collapse {
-          width: $navbar-collapsed-width !important;
-          padding-right: map_get($spacers, 2);
-          padding-left: 0.9375rem;
-          margin-left: -0.9375rem;
-          overflow: hidden;
-        }
-
-        .dropdown-indicator:after,
-        .nav-link .badge,
-        .nav-link-text,
-        .btn-purchase {
-          opacity: 0;
-          transition: $transition-base;
-        }
-
-        .navbar-toggle-icon {
-          padding-right: 0.3125rem;
-
-          &:after {
-            width: 75%;
-          }
-
-          &:before {
-            width: 50%;
-          }
-        }
-
-        + .content {
-          margin-left: 3.125rem !important;
-
-          .navbar-top {
-            padding-left: 13.5rem;
-          }
-        }
-      }
-
-      .navbar-vertical-divider {
-        padding-right: 0.75rem !important;
-      }
-
-      &:not(.navbar-vertical-collapsed-hover) {
-        .navbar-vertical.navbar-expand-#{$item} {
-          .TrackY {
-            display: none !important;
-          }
-
-          .navbar-collapse,
-          .collapse.show {
-            .nav {
-              display: none;
-            }
-          }
-        }
-      }
-    }
-
-    .navbar-vertical-collapsed-hover {
-      .navbar-vertical.navbar-expand-#{$item} {
-        width: $navbar-vertical-max-width;
-
-        .navbar-collapse {
-          width: $navbar-vertical-max-width !important;
-          box-shadow: 10px 0 10px -9px rgba($black, 0.2);
-          overflow: auto;
-        }
-
-        .dropdown-indicator:after,
-        .nav-link .badge,
-        .nav-link-text,
-        .btn-purchase {
-          opacity: 1;
-        }
-
-        .navbar-vertical-divider {
-          padding-right: 0 !important;
+          padding-left: 1.5rem * 2.75;
         }
       }
     }
