Add min-width to table

--- a/src/views/components/table/table.scss
+++ b/src/views/components/table/table.scss
@@ -30,6 +30,7 @@ td .dropdown-toggle:after {
 }
 .table-dashboard {
   overflow: hidden;
+  min-width: 576px;
   th {
     border-bottom-width: 1px !important;
   }
