--- a/src/index.scss
+++ b/src/index.scss
@@ -48,3 +48,16 @@ body {
   background-color: #fff;
   border-bottom: 0 solid #edf2f9;
 }
+
+/*-----------------------------------------------
+|   Remove spinner from Input[type="number"]
+-----------------------------------------------*/
+.input-spin-none::-webkit-outer-spin-button,
+.input-spin-none::-webkit-inner-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
+}
+
+.input-spin-none[type='number'] {
+  -moz-appearance: textfield; /* Firefox */
+}
