--- a/src/views/pages/not-found/not-found.scss
+++ b/src/views/pages/not-found/not-found.scss
@@ -9,7 +9,7 @@ body {
   align-items: center;
   justify-content: center;
   text-align: center;
-  height: 100%;
+  height: 100vh;
   font-family: Arial, 'Helvetica Neue', Helvetica, sans-serif;
 }
 .error-page h1 {
