--- a/src/assets/scss/plugins/_toastify.scss
+++ b/src/assets/scss/plugins/_toastify.scss
@@ -1,50 +1,12 @@
-$spacer: 1rem !default;
-$spacers: () !default;
-$spacers: map-merge(
-  $spacers,
-  (
-    0: 0,
-    1: (
-      $spacer * 0.25,
-    ),
-    2: (
-      $spacer * 0.5,
-    ),
-    3: $spacer,
-    4: (
-      $spacer * 1.8,
-    ),
-    5: (
-      $spacer * 3,
-    ),
-    6: (
-      $spacer * 4,
-    ),
-    7: (
-      $spacer * 5,
-    ),
-    8: (
-      $spacer * 7.5,
-    ),
-    9: (
-      $spacer * 10,
-    ),
-    10: (
-      $spacer * 12.5,
-    ),
-    11: (
-      $spacer * 15,
-    ),
-  )
-);
+@import '~react-toastify/dist/ReactToastify.min.css';
 
 .Toastify__toast {
   min-height: 0 !important;
   border-radius: 0.25rem !important;
-  padding: 5px 5px !important;
+  padding: 10px 10px !important;
   overflow: hidden;
   .Toastify__close-button {
-    padding: 5px 0 !important;
+    padding: 10px 0 !important;
   }
   .Toastify__progress-bar {
     height: 0.125rem !important;
@@ -65,7 +27,7 @@ $spacers: map-merge(
   color: #4d5969 !important;
 }
 .Toastify__toast-body {
-  padding: map_get($spacers, 2) 0 !important;
+  padding: 0.5rem 0 !important;
 }
 
 @keyframes fadeIn {
